# Futuristic-HUD

./: .gitignore  CMakeLists.txt  README.md
src/: SystemMonitor.cpp  SystemMonitor.h  main.cpp
